# otpless-erlang

./: CMakeLists.txt  README.md  main.c
.github/workflows/: android.yml  ios.yml  linux.yml  macos.yml  verify-android-on-macos.yml  verify-android-on-windows.yml  verify-android.yml  verify-ios.yml  verify-linux.yml  verify-macos.yml  verify-windows-from-msys2.yml  verify-windows.yml  windows.yml
erts/: config.h.in
erts/emulator/pcre/: generate_include.pl
erts/include/: erl_int_sizes_config.h.in
erts/include/internal/: ethread_header_config.h.in
