cmake_minimum_required(VERSION 3.10)

project(
  "OTPless Erlang"
  VERSION 27.0.0
  DESCRIPTION "A distribution of Erlang without the OTP framework."
  HOMEPAGE_URL "https://www.otpless-erlang.org"
  LANGUAGES C
)

# Print out some CMake variables for debugging/development purposes.

message(STATUS "CMAKE_CROSSCOMPILING = ${CMAKE_CROSSCOMPILING}")
message(STATUS "CMAKE_CROSSCOMPILING_EMULATOR = ${CMAKE_CROSSCOMPILING_EMULATOR}")

message(STATUS "CMAKE_GENERATOR = ${CMAKE_GENERATOR}")
message(STATUS "CMAKE_GENERATOR_INSTANCE = ${CMAKE_GENERATOR_INSTANCE}")
message(STATUS "CMAKE_GENERATOR_PLATFORM = ${CMAKE_GENERATOR_PLATFORM}")
message(STATUS "CMAKE_GENERATOR_TOOLSET = ${CMAKE_GENERATOR_TOOLSET}")

message(STATUS "CMAKE_HOST = ${CMAKE_HOST}")
message(STATUS "CMAKE_HOST_NAME = ${CMAKE_HOST_NAME}")
message(STATUS "CMAKE_HOST_PROCESSOR = ${CMAKE_HOST_PROCESSOR}")
message(STATUS "CMAKE_HOST_VERSION = ${CMAKE_HOST_VERSION}")

message(STATUS "CMAKE_SYSTEM = ${CMAKE_SYSTEM}")
message(STATUS "CMAKE_SYSTEM_NAME = ${CMAKE_SYSTEM_NAME}")
message(STATUS "CMAKE_SYSTEM_PROCESSOR = ${CMAKE_SYSTEM_PROCESSOR}")
message(STATUS "CMAKE_SYSTEM_VERSION = ${CMAKE_SYSTEM_VERSION}")

message(STATUS "CMAKE_HOST_UNIX = ${CMAKE_HOST_UNIX}")
message(STATUS "CMAKE_HOST_WIN32 = ${CMAKE_HOST_WIN32}")
message(STATUS "CMAKE_LIBRARY_ARCHITECTURE = ${CMAKE_LIBRARY_ARCHITECTURE}")
message(STATUS "CMAKE_LIBRARY_ARCHITECTURE_REGEX = ${CMAKE_LIBRARY_ARCHITECTURE_REGEX}")

message(STATUS "ANDROID = ${ANDROID}")
message(STATUS "APPLE = ${APPLE}")
message(STATUS "CYGWIN = ${CYGWIN}")
message(STATUS "IOS = ${IOS}")
message(STATUS "LINUX = ${LINUX}")
message(STATUS "MINGW = ${MINGW}")
message(STATUS "MSVC = ${MSVC}")
message(STATUS "MSVC_IDE = ${MSVC_IDE}")
message(STATUS "MSVC_TOOLSET_VERSION = ${MSVC_TOOLSET_VERSION}")
message(STATUS "MSVC_VERSION = ${MSVC_VERSION}")
message(STATUS "MSYS = ${MSYS}")
message(STATUS "UNIX = ${UNIX}")
message(STATUS "WIN32 = ${WIN32}")
message(STATUS "XCODE = ${XCODE}")
message(STATUS "XCODE_VERSION = ${XCODE_VERSION}")

set(ERLANG_BUILD_TYPE "release"
  CACHE
  STRING "The build type (either 'release' or 'debug')."
)
if(ERLANG_BUILD_TYPE STREQUAL "release")
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
elseif(ERLANG_BUILD_TYPE STREQUAL "debug")
  set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
else()
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
endif()

set(ERLANG_BUILD_FLAVOR "jit"
  CACHE
  STRING "The build flavor (either 'emu' or 'jit'). It should be JIT by default unless not supported by the platform."
)

add_library(erlang SHARED main.c)
set_target_properties(erlang PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(erlang PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

install(TARGETS erlang LIBRARY DESTINATION lib)
